# broker_message_producers

./: .gitignore  .pre-commit-config.yaml  README.md  data_generator.py  docker-compose.yaml  pyproject.toml  pyspark_test.py  requirements.txt
data/room_1/: temperature.csv
producers/: __init__.py  __main__.py
producers/application/: ports.py
producers/infrastructure/clients/: __init__.py  kafka.py  rabbitmq.py
producers/infrastructure/data_readers/: __init__.py  csv.py
producers/infrastructure/serializers/: __init__.py  bytes.py
rabbitmq/: Dockerfile
rabbitmq/config/: 20-defaults.conf  definitions.json
