[tool.poetry]
name = "producers"
version = "0.1.0"
description = ""
authors = ["Andres Plazas <apr@certainly.com>"]
readme = "README.md"
packages = [{include = "producers", from = "./"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
kafka-python = "^2.0.2"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
